--- a/frontend/presence-tracker/src/components/CalendarComponent.css
+++ b/frontend/presence-tracker/src/components/CalendarComponent.css
@@ -5,7 +5,7 @@
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   font-family: Arial, sans-serif;
   text-align: center; /* Center the entire container */
 }
@@ -21,7 +21,7 @@
 .react-calendar {
   margin: auto;
   border: none;
-  background-color: #fff;
+  background-color: #353535;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
