--- a/frontend/presence-tracker/src/components/Register.css
+++ b/frontend/presence-tracker/src/components/Register.css
@@ -2,75 +2,129 @@
 .register-container {
   display: flex;
   flex-direction: column;
-  max-width: 400px;
-  margin: auto;
-  padding: 20px;
+  max-width: 500px;
+  margin: 20px auto;
+  padding: 40px 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
+  font-family: Arial, sans-serif;
+  gap: 40px;
 }
 
 /* Form title styling */
 .register-container h2 {
   text-align: center;
   color: #333;
-  margin-bottom: 20px;
+  margin: 0;
+  padding: 0;
+  font-size: 1.75em;
 }
 
-/* Align labels and inputs horizontally */
+.register-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+/* Grid layout for the form groups */
+.register-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Create a 2-column grid */
+  gap: 10px; /* Space between columns */
+}
+
+/* Label styling */
 .form-group {
   display: flex;
-  align-items: center;
-  margin-bottom: 15px;
+  flex-direction: column;
+  margin-bottom: 12px;
 }
 
 .form-group label {
-  flex: 1;
   font-weight: bold;
   color: #555;
+  margin-bottom: 6px;
 }
 
+.register-container .form_telInputContainer button:hover {
+  background-color: transparent;
+}
+
+.register-container .form_telInputContainer .form_telInput {
+  padding: 8px 12px 8px 47px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+/* Input fields styling */
 .form-group input[type="text"],
 .form-group input[type="date"],
 .form-group input[type="email"],
-.form-group input[type="password"],
-.form-group input[type="checkbox"] {
-  flex: 2;
-  padding: 8px;
+.form-group input[type="password"] {
+  padding: 8px 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 14px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-/* Checkbox alignment fix */
-.form-group input[type="checkbox"] {
-  width: auto;
-  margin-right: 8px;
+.invalid-input {
+  border: 1px solid red !important;
+}
+
+.register-container .workEmail_container {
+  position: relative;
+}
+
+.workEmail_container .workEmail_suggestion {
+  width: 100%;
+  position: absolute;
+  bottom: -40px;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 4px;
+  z-index: 10;
+  cursor: pointer;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.register-container .form_checkbox {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 /* Button styling */
-.register-container button {
-  width: 100%;
-  padding: 10px;
+.register-container .form_submit {
+  width: 80%;
+  padding: 12px;
   font-size: 16px;
   font-weight: bold;
   color: #fff;
-  background-color: #4CAF50;
+  background: linear-gradient(to left, #3280da 0%, #000000 100%);
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  margin-top: 20px;
 }
 
-.register-container button:hover {
-  background-color: #45a049;
+.register-container .form_submit:hover {
+  background: linear-gradient(to left, #000000 0%, #3280da 100%);
 }
 
-/* Error message styling */
+/* Error message styling for form-wide errors */
 .error-message {
   color: red;
   font-size: 0.9em;
   text-align: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
