--- a/frontend/presence-tracker/src/components/AdminDashboard.css
+++ b/frontend/presence-tracker/src/components/AdminDashboard.css
@@ -1,5 +1,5 @@
 .admin-dashboard {
-  display: flex;
+  /* display: flex;
   font-family: Arial, sans-serif;
   flex-direction: column;
   align-items: center;
@@ -11,7 +11,12 @@
   padding: 20px;
   padding: 20px;
   box-sizing: border-box;
-  color: #333;
+  color: #333; */
+}
+
+.navbar {
+  display: flex;
+  background-color: red;
 }
 
 /* Header */
